# kinema

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
notebooks/: 01_pipeline_demo.ipynb  02_kinematics_metrics.ipynb  03_move_segmentation.ipynb  04_skeleton_overlay.ipynb
src/kinema/: __init__.py  cli.py  config.py
src/kinema/io/: com.py  keypoints.py  video.py
src/kinema/kinematics/: com.py  metrics.py  smoothing.py
src/kinema/pose/: extract.py
src/kinema/render/: overlay.py  summary.py
src/kinema/segmentation/: moves.py
tests/: conftest.py  test_cli.py  test_config.py  test_pipeline.py
tests/io/: test_keypoints.py  test_video.py
tests/kinematics/: test_com.py  test_metrics.py  test_smoothing.py
tests/pose/: test_extract.py
tests/render/: test_overlay.py  test_summary.py
tests/segmentation/: test_moves.py
