[project]
name = "kinema"
version = "0.1.0"
description = "Bouldering performance analytics from phone video"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mediapipe>=0.10",
    "opencv-python-headless>=4.9",
    "pyarrow>=15.0",
    "click>=8.1",
    "pydantic>=2.6",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
kinema = "kinema.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinema"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.13"
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
]
