[project]
name = "kinema"
version = "0.1.0"
description = "Bouldering performance analytics from phone video"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mediapipe>=0.10",
    "opencv-python-headless>=4.9",
    "pyarrow>=15.0",
    "click>=8.1",
    "pydantic>=2.6",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=3.0.3",
    "tqdm>=4.66",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
kinema = "kinema.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinema"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.13"
files = ["src"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "types-tqdm>=4.66",
]

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*", "mediapipe", "mediapipe.*", "pyarrow", "pyarrow.*", "tqdm", "tqdm.*", "scipy", "scipy.*"]
ignore_missing_imports = true
